# swim-fantasy

./: .gitignore  2023 LP Day 2.txt  PROGRESS.md  README.md  Swim Fantasy LP Day 2.py  cached_data.json  data_parser.py  entry.py  integer_program.py  lineup-optimizer.py  pyproject.toml  schedule.json  single_day_solver.py  swimmer.py  swimming.db  wrs.db
.lsp/.cache/: db.transit.json
src/: data_parser.py  entry.py  full_meet_solver.py  lineup-optimizer.py  lineup_optimizer.py  main.py  single_day_solver.py  swimmer.py  wr-database.py  wr_scraper.py
src/solvers/: __init__.py  full_meet_solver.py  single_day_solver.py
src/utils/: __init__.py  constants.py
