[project]
name = "swim-fantasy"
version = "0.1.0"
description = "A tool for free World Aquatics merchandise"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.1",
    "matplotlib>=3.10.3",
    "ortools>=9.14.6206",
    "pip>=25.1.1",
    "pypdf>=5.6.1",
    "requests>=2.32.4",
    "ruff>=0.12.0",
    "scipy>=1.15.3",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]

[tool.ruff]
lint.extend-select = ["ALL"]
lint.ignore = [
    "C901",    # Function is too complex"
    "ERA001",  # Commented out code
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements

    "D203",    # Use a single blank line after a function or class docstring
    "D212",    # Have text on the first line of a multiline docstring
    "E501",    # Line too long
    "FIX002",  # Line contains a TODO comment
    "S608",    # Constructing SQL queries using f-strings
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link for this TODO
    "T201",    # Used a print statement (don't use print statements in production code)
]
